# lahja

./: .env.example  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/: main.py
backend/lahja/: .gitignore  audio.py  cli.py  config.py  minimax.py  pipeline.py  pyproject.toml  refine.py  timeline.py  transcribe.py
src/: App.jsx
src/components/: AudioCard.jsx  Footer.jsx  Navbar.jsx
src/lahja/: __init__.py  audio.py  cli.py  config.py  minimax.py  pipeline.py  refine.py  timeline.py  transcribe.py
src/pages/: Home.jsx  Processing.jsx  Results.jsx
